Fixed the menu on mobile Chrome.

--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -9,6 +9,25 @@
     }
 }
 
-.header-wrapper {
-    z-index: 10;
+@media (max-width: $maxWidth) {
+    .header.open {
+        @keyframes appear {
+            0% {
+                opacity: 0;
+                z-index: 0;
+                height: 0;
+                margin: 0;
+                transform: scaleY(0);
+                transform-origin: top;
+            }
+            100% {
+                opacity: 1;
+                z-index: 100;
+                height: $navHeight;
+                margin: 2em 0;
+                transform: scaleY(1);
+                transform-origin: top;
+            }
+        }
+    }
 }
